<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gemalto.assignment.UserDashboardActivity"
    tools:showIn="@layout/activity_user_dashboard">


    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="@dimen/profile_pic_size"
        android:layout_height="@dimen/profile_pic_size"
        app:civ_border_width="1dp"
        app:civ_border_color="#fff"
        android:id="@+id/profile_pic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15"/>

    <TableLayout
        android:divider="#000"
        android:showDividers="middle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent=".75"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <TableRow
            android:background="@android:color/darker_gray"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="4"
            android:padding="@dimen/table_row_padding">

            <TextView
                android:layout_weight="1.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/user_id"
                android:textSize="@dimen/text_size_normal"/>


            <TextView
                android:layout_weight="2.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/user_id"
                android:gravity="start"
                android:textSize="@dimen/text_size_normal"/>

        </TableRow>

        <TableRow
            android:padding="@dimen/table_row_padding"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="4">

            <TextView
                android:layout_weight="1.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textSize="@dimen/text_size_normal"/>


            <TextView
                android:layout_weight="2.5"
                android:layout_width="0dp"
                android:gravity="start"
                android:layout_height="wrap_content"
                android:id="@+id/user_name"
                android:textSize="@dimen/text_size_normal"/>

        </TableRow>

        <TableRow
            android:padding="@dimen/table_row_padding"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="4">

            <TextView
                android:layout_weight="1.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/user_gender"
                android:textSize="@dimen/text_size_normal"/>


            <TextView
                android:layout_weight="2.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/user_gender"
                android:gravity="start"
                android:textSize="@dimen/text_size_normal"/>

        </TableRow>

        <TableRow
            android:padding="@dimen/table_row_padding"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="4">

            <TextView
                android:layout_weight="1.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/user_age"
                android:textSize="@dimen/text_size_normal"/>


            <TextView
                android:layout_weight="2.5"
                android:layout_width="0dp"
                android:gravity="start"
                android:layout_height="wrap_content"
                android:id="@+id/user_age"
                android:textSize="@dimen/text_size_normal"/>

        </TableRow>

        <TableRow
            android:padding="@dimen/table_row_padding"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="4">

            <TextView
                android:layout_weight="1.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/user_dob"
                android:textSize="@dimen/text_size_normal"/>


            <TextView
                android:layout_weight="2.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/user_dob"
                android:textSize="@dimen/text_size_normal"/>

        </TableRow>

        <TableRow
            android:padding="@dimen/table_row_padding"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="4">

            <TextView
                android:layout_weight="1.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/user_email"
                android:textSize="@dimen/text_size_normal"/>


            <TextView
                android:layout_weight="2.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/user_email"
                android:textSize="@dimen/text_size_normal"/>

        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btn_store"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/store"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintHorizontal_bias="0.5"/>


    <Button
        android:visibility="gone"
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintHorizontal_bias="0.5"/>
</android.support.constraint.ConstraintLayout>
